fix: welaaa UI 수정 #18

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,20 +13,19 @@
         tools:context=".presentation.MainActivity">
 
         <androidx.fragment.app.FragmentContainerView
-            android:name="com.sopt.welaaa.presentation.home.view.HomeFragment"
             android:id="@+id/fcv_main"
+            android:name="com.sopt.welaaa.presentation.home.view.HomeFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/bnv_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout="@layout/fragment_home"/>
+            tools:layout="@layout/fragment_home" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="@color/white"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="55dp"
             android:background="@color/white"
             app:layout_constraintBottom_toTopOf="@id/bnv_main"
             app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +35,7 @@
                 android:id="@+id/sb_mini_player_main"
                 android:layout_width="0dp"
                 android:layout_height="5dp"
+                android:layout_marginTop="-2dp"
                 android:max="100000"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
